--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
 			
 			<header>
-				<h1>Innovative Menu Item Effects <span>Subtle and modern</span><span>Click and Enjoy</span></h1>
+				<h1>Innovative Menu Item Effects <span>Subtle and modern</span><span>Click the Links and Enjoy</span></h1>
 				
 			</header>
 			<section class="color-1">
